--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,21 @@ body {
   border-color: #f61849 !important;
 }
 
-.star-ratings {
+.star-ratings,
+.star-container {
   transform: rotate(180deg);
+}
+
+.top-content .carousel-control-prev {
+  left: -110px;
+  border-bottom: 0;
+  font-size: 40px;
+  color: #444;
+}
+
+.top-content .carousel-control-next {
+  right: -110px;
+  border-bottom: 0;
+  font-size: 40px;
+  color: #444;
 }
